--- a/public/index.html
+++ b/public/index.html
@@ -16,21 +16,24 @@ SPDX-License-Identifier: CC0-1.0
 </head>
 
 <body>
-
-  <h1>Web Component - Boilerplate & Helloworld</h1>
-
-  Code Snippet:
-  <pre><code>
-    &lt;hello-world title="Hello World!"&gt;&lt;/hello-world&gt;
-
-    &lt;script src="webcomp-boilerplate.js"&gt;&lt;/script&gt;
-  </code></pre>
-
-
-  Output:
-  <!-- Set the attribute "title" and refer to it as property in JS -->
-  <hello-world title="Hello World!" />
-  <script src="webcomp-boilerplate.js"></script>
+<div class="buffer__container">
+  <div class="buffer__control">
+    <button class="js-save">Save</button>
+    <button class="js-clear">Clear</button>
+    <button class="js-create">Create</button>
+  </div>
+  <div class="buffer__elements js-buffer-elements">
+    <svg-polygon></svg-polygon>
+    <svg-polygon></svg-polygon>
+    <svg-polygon></svg-polygon>
+    <svg-polygon></svg-polygon>
+  </div>
+</div>
+<div class="work-area__container">
+  <work-area>
+  </work-area>
+</div>
+<script src="webcomp-boilerplate.js"></script>
 
 </body>
 
