Add polygon input

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,10 @@ SPDX-License-Identifier: CC0-1.0
 <body>
 <div class="buffer__container">
   <div class="buffer__control">
-    <button class="js-save">Save</button>
-    <button class="js-clear">Clear</button>
-    <button class="js-create">Create</button>
+    <button class="js-save">Сохранить</button>
+    <button class="js-clear">Сбросить</button>
+    <button class="js-create">Создать</button>
+    <input type="number" class="js-input" name="quantity" min="1" max="20" value="4">
   </div>
   <div class="buffer__elements js-buffer-elements">
     <svg-polygon></svg-polygon>
