Make events like in description

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,15 @@ SPDX-License-Identifier: CC0-1.0
     <button class="js-save">Сохранить</button>
     <button class="js-clear">Сбросить</button>
     <button class="js-create">Создать</button>
-    <input type="number" class="js-input" name="quantity" min="1" max="20" value="4">
+    <input type="number" class="js-input" name="quantity" min="5" max="20" value="4">
   </div>
+  <p>Сохранить - Сохранить раб. область в local storage</p>
+  <p>Сбросить - Удалить данные из local storage</p>
+  <p>Создать - Создать новые фигуры, количество зависит от введенного значения в текстовом поле</p>
+  <p>В текстовом поле можно выбрать от 5 до 20 фигур</p>
+  <p>С помощью колесика мыши можно изменять масштаб</p>
+  <p>С помощью ЛКМ можно перемещать раб область по контейнеру</p>
+  <p>Если зажать ЛКМ и покрутить колесиком мыши, то можно прокрутить контейнер</p>
   <div class="buffer__elements js-buffer-elements">
     <svg-polygon></svg-polygon>
     <svg-polygon></svg-polygon>
