--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@ SPDX-License-Identifier: CC0-1.0
     <svg-polygon></svg-polygon>
     <svg-polygon></svg-polygon>
     <svg-polygon></svg-polygon>
+    <svg-polygon></svg-polygon>
   </div>
 </div>
 <div class="work-area__container">
